[Performance Panel] Fix  values are overlapping with the header values in datagrid
Screencast: https://screencast.googleplex.com/cast/NTkyNDI3NzYzODM5Nzk1Mnw0YzhhMjg1MS0zNw
Bug: 1481479
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4859642
Commit-Queue: Hadrien Jaubert <hadrienjaubert@google.com>

--- a/front_end/panels/timeline/timelinePanel.css
+++ b/front_end/panels/timeline/timelinePanel.css
@@ -324,7 +324,7 @@
 .timeline-tree-view .data-grid div.background-percent-bar {
   float: right;
   position: relative;
-  z-index: 999;
+  z-index: 1;
 }
 
 .timeline-tree-view .data-grid span.percent-column {
@@ -418,6 +418,8 @@
 
 .timeline-tree-view .data-grid thead {
   height: 21px;
+  /* so the header is always above any body rows that the user has scrolled past */
+  z-index: 2;
 }
 
 .timeline-stack-view-header {
